--- a/css/style.css
+++ b/css/style.css
@@ -36,3 +36,28 @@ a:hover{
     color: black;
     box-shadow: 3px 3px 0 rgb(0, 255, 255);
 }
+
+footer p{
+    text-align: center;
+    font-size: 0.7rem;
+    color: rgb(135, 135, 135);
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+}
+
+footer a{
+    color: rgb(135, 135, 135);
+    font-style: normal;
+}
+
+footer a:hover{
+    color: rgb(135, 135, 135);
+    background: none;
+    box-shadow: none;
+}
+
+footer a:visited{
+    color: rgb(135, 135, 135);
+}
