--- a/css/index.css
+++ b/css/index.css
@@ -43,3 +43,17 @@ main{
     position: absolute;
     z-index: -9999;
 }
+
+@media (max-width: 768px){
+    #title{
+        font-size: 3rem;
+    }
+
+    #introduction{
+        font-size: 1.5rem;
+    }
+
+    footer{
+        display: none;
+    }
+}
