--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,14 @@
+@font-face {
+    font-family: 'DungGeunMo';
+    src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_six@1.2/DungGeunMo.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
 *{
-    font-family: 'Gulim';
+    font-family: 'DungGeunMo', 'Gulim';
     color: white;
+    font-weight: normal;
 }
 
 html{
